@@ -31,8 +31,8 @@
 #ifndef __IOADEFS__
 #define __IOADEFS__
 
-#define TURN_SERVER_VERSION "2.6.7.2"
-#define TURN_SERVER_VERSION_NAME "Harding Grim"
+#define TURN_SERVER_VERSION "3.x.x.x"
+#define TURN_SERVER_VERSION_NAME "Practical Frost"
 #define TURN_SOFTWARE "Citrix-"TURN_SERVER_VERSION" '"TURN_SERVER_VERSION_NAME"'"
 
 #if (defined(__unix__) || defined(unix)) && !defined(USG)
